#142 Implement logic for subscription to the history service